Fixed footer on mobile

--- a/kelvin/website/static/website/css/style.css
+++ b/kelvin/website/static/website/css/style.css
@@ -97,20 +97,26 @@ html, body {
 
 #main {
   overflow:auto;
-  padding-bottom: 192px; /* this needs to be bigger than footer height*/
+  padding-bottom: 192px;
 }
 
 .footer {
   position: relative;
-  margin-top: -192px; /* negative value of footer height */
-  height: 192px;
   clear:both;
+  margin-top: -192px;
+  height: 192px;
 } 
 
-.border-radius-med {
-  border-radius: 8px;
-}
+@media (max-width: 767px) {
+  #main {
+    padding-bottom: 468px;
+  }
 
+  .footer {
+    margin-top: -468px;
+    height: 468px;
+  }
+}
 
 /* HOME ------------------------------------------------------------------------------ */
 
@@ -176,7 +182,6 @@ html, body {
   width: 100%;
   height: 400px;
   border-width: 0;
-  margin: 10px;
 }
 
 .left_align_text {
@@ -191,7 +196,6 @@ html, body {
   width: 100%;
   height: 280px;
   border-width: 0;
-  margin: 10px;
 }
 
 /* Past Concerts */
@@ -296,5 +300,9 @@ ul>li {
 
 .full-small-padding {
   padding: 20px;
+  border-radius: 8px;
+}
+
+.border-radius-med {
   border-radius: 8px;
 }
